# play-with-csv

./: Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: audit.yml  pre-checks.yml  pull_request_template.md
artefacts/: test_transactions_large.csv  test_transactions_small.csv  test_transactions_with_all_types.csv
src/: errors.rs  ledger.rs  main.rs  models.rs  processor.rs  traits.rs  writer.rs
