[package]
name = "play-with-csv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = { version = "1.37", features = ["macros"] }
thiserror = "2.0"
getset = "0.1"

[dev-dependencies]
serde_json = "1.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
